# python-project-52

./: Makefile  README.md  build.sh  database.sql  pyproject.toml  render.yaml
task_manager/: forms.py  models.py  settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  index.html  login.html  users.html
