[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["polovykh <polovykh@mail.ru>"]
readme = "README.md"
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
django-bootstrap5 = "^24.2"
ipython = "^8.25.0"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
flake8-isort = "^6.1.1"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
